--- a/WidgetLib/FloatWindow/build.gradle
+++ b/WidgetLib/FloatWindow/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
 }
