--- a/CommonLib/ActivityManager/src/main/AndroidManifest.xml
+++ b/CommonLib/ActivityManager/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <provider
-            android:name="com.yc.activitymanager.BaseProvider"
+            android:name="com.yc.activitymanager.ManagerProvider"
             android:authorities="${applicationId}.baseProvider"
             android:exported="false" />
     </application>
