--- a/AppPlayer/build.gradle
+++ b/AppPlayer/build.gradle
@@ -69,9 +69,6 @@ dependencies {
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
     implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
 
-    implementation 'io.agora.rtc:full-sdk:4.0.1'
-    implementation "io.agora.rtc:voice-sdk:4.0.1"
-
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
 
 
@@ -101,5 +98,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
+    implementation project(path: ':VideoSurface')
 
 }
