--- a/PlayerLIb/VideoPlayer/build.gradle
+++ b/PlayerLIb/VideoPlayer/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["cardview"])
     implementation project(':VideoKernel')
+    implementation project(':VideoSurface')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     /*//这两个是必须要加的，其它的可供选择
