--- a/settings.gradle
+++ b/settings.gradle
@@ -249,13 +249,14 @@ project(':MonitorPicture').projectDir = new File('MonitorLib/MonitorPicture')
 
 
 /* +++++++++ 音视频 +++++++++ */
-include ':VideoSqlLite',':VideoCache',':AudioPlayer',
+include ':VideoSqlLite',':VideoCache',':AudioPlayer',':VideoSurface',
         ':MusicPlayer', ':VideoKernel', ':VideoPlayer', ':VideoM3u8', ':VideoView'
 project(':VideoSqlLite').projectDir = new File('PlayerLib/VideoSqlLite')
 project(':VideoCache').projectDir = new File('PlayerLib/VideoCache')
 project(':AudioPlayer').projectDir = new File('PlayerLib/AudioPlayer')
 project(':MusicPlayer').projectDir = new File('PlayerLib/MusicPlayer')
 project(':VideoKernel').projectDir = new File('PlayerLib/VideoKernel')
+project(':VideoSurface').projectDir = new File('PlayerLib/VideoSurface')
 project(':VideoPlayer').projectDir = new File('PlayerLib/VideoPlayer')
 project(':VideoM3u8').projectDir = new File('PlayerLib/VideoM3u8')
 project(':VideoView').projectDir = new File('PlayerLib/VideoView')
