--- a/CommonLib/NetWorkLib/build.gradle
+++ b/CommonLib/NetWorkLib/build.gradle
@@ -1,18 +1,15 @@
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        multiDexEnabled true
     }
 
     buildTypes {
@@ -29,11 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(rootProject.ext.dependencies["appcompat"])
-    implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':EventUploadLib')
-    implementation project(path: ':AppCompress')
-    implementation project(path: ':AppEncryptLib')
+    implementation rootProject.ext.dependencies["appcompat"]
+    implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':AppContextLib')
-    implementation project(path: ':NetWorkLib')
 }
