--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -31,10 +31,13 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation project(path: ':ToolUtilsLib')
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation project(path: ':NetWorkLib')
     //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
     implementation project(path: ':LocaleHelperLib')
     //内存工具类
     implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
+    implementation project(path: ':ToolFileLib')
 }
