--- a/settings.gradle
+++ b/settings.gradle
@@ -72,7 +72,7 @@ include ':AppStatusLib',':ToolUtilsLib',':FragmentManager',':AppCompress',
         ':AppCommonInter',':ToolMemoryLib',':AppPermission',':PhoneSensor',
         ':AppLruDisk',':AppLruCache',':DownloadHelper',':AppEncryptLib',
         ':AppMediaStore',':DataCloneLib',':AppScreenLib',':BaseVpAdapter',':ImageToolLib',
-        ':AppHandlerLib',':FileIoHelper',':ZipFileLib'
+        ':AppHandlerLib',':FileIoHelper',':ZipFileLib',':NetWorkLib',':AppContextLib'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ComponentLib').projectDir = new File('CommonLib/ComponentLib')
@@ -106,6 +106,9 @@ project(':ImageToolLib').projectDir = new File('CommonLib/ImageToolLib')
 project(':AppHandlerLib').projectDir = new File('CommonLib/AppHandlerLib')
 project(':FileIoHelper').projectDir = new File('CommonLib/FileIoHelper')
 project(':ZipFileLib').projectDir = new File('CommonLib/ZipFileLib')
+project(':NetWorkLib').projectDir = new File('CommonLib/NetWorkLib')
+project(':AppContextLib').projectDir = new File('CommonLib/AppContextLib')
+
 
 
 
@@ -169,7 +172,7 @@ include ':ZxingServerLib', ':WebSocketLib',  ':SocketIoLib', ':SerialTaskLib' ,
         ':AnimatorToolLib', ':AppTraceTool', ':LongAliveLib',':EasyExecutor',
         ':ThreadPoolLib', ':ThreadTaskLib', ':AutoCloserLib', ':AppProcessLib',
         ':AnimatorHelper', ':ThreadDebugLib', ':LiveDataBus', ':AppUpdateLib',
-        ':ZXingCodeLib', ':TransitionHelper', ':AnimBaseHelper'
+        ':ZXingCodeLib', ':TransitionHelper', ':AnimBaseHelper', ':NotCaptureLib'
 project(':ZxingServerLib').projectDir = new File('ToolLib/ZxingServerLib')
 project(':ZXingCodeLib').projectDir = new File('ToolLib/ZXingCodeLib')
 project(':WebSocketLib').projectDir = new File('ToolLib/WebSocketLib')
@@ -193,6 +196,7 @@ project(':NtpTimeLib').projectDir = new File('ToolLib/NtpTimeLib')
 project(':AppUpdateLib').projectDir = new File('ToolLib/AppUpdateLib')
 project(':TransitionHelper').projectDir = new File('ToolLib/TransitionHelper')
 project(':AnimBaseHelper').projectDir = new File('ToolLib/AnimBaseHelper')
+project(':NotCaptureLib').projectDir = new File('ToolLib/NotCaptureLib')
 
 
 /* +++++++++ Apt框架基础工具库 +++++++++ */
