feat：完善通用缓存库功能

--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation project(path: ':ToolFileLib')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
+    implementation project(path: ':AppContextLib')
 }
