--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation rootProject.ext.dependencies["datastore"]
+    implementation rootProject.ext.dependencies["coreKtx"]
+
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':EventUploadLib')
     implementation project(path: ':AppLruDisk')
