--- a/CommonLib/AppLruDisk/build.gradle
+++ b/CommonLib/AppLruDisk/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppContextLib')
 }
