--- a/ServerLib/ImageServer/build.gradle
+++ b/ServerLib/ImageServer/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation rootProject.ext.dependencies["glide"]
     implementation project(path: ':ToolFileLib')
     implementation project(path: ':ImageToolLib')
+    implementation project(path: ':AppContextLib')
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
     implementation rootProject.ext.dependencies["okhttp"]
     implementation project(path: ':ToolUtilsLib')
