--- a/Business/LibraryLayer/build.gradle
+++ b/Business/LibraryLayer/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     api 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.3'
     implementation project(path: ':BaseClassLib')
     implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppContextLib')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 
     implementation project(path: ':ToolUtilsLib')
