--- a/WidgetLib/WebViewLib/build.gradle
+++ b/WidgetLib/WebViewLib/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     //api 'com.tencent.tbs.tbssdk:sdk:43967'
     api files('libs/tbs_sdk_thirdapp_v4.3.0.67_43967_sharewithdownloadwithfile_withoutGame_obfs_20200923_120452.jar')
     implementation project(path: ':ImageToolLib')
+    implementation project(path: ':NetWorkLib')
     //x5库
     //仅仅在编译时使用，但最终不会被编译到apk或aar里
     //provided files('libs/tbs_sdk_thirdapp_v4.3.0.3_43903_sharewithdownloadwithfile_withoutGame_obfs_20200402_121309.jar')
