feat：完善代码库

--- a/AppHelper/build.gradle
+++ b/AppHelper/build.gradle
@@ -243,8 +243,8 @@ dependencies {
 //    implementation project(path: ':KotlinBusiness')
     implementation project(path: ':MonitorFpsLib')
     implementation project(path: ':AppCommonInter')
-    implementation project(path: ':AppLogHelper')
-    implementation project(path: ':AppLogProcess')
+    implementation project(path: ':AppLogClient')
+    implementation project(path: ':AppLogService')
     implementation project(path: ':MonitorTimeLib')
     implementation project(path: ':NtpTimeLib')
     implementation project(path: ':AppWidget')
