--- a/yc.gradle
+++ b/yc.gradle
@@ -101,8 +101,8 @@ ext {
             "retrofit-converter-gson" : "com.squareup.retrofit2:converter-gson:$retrofitSdkVersion",
             "retrofit-adapter-rxjava2": "com.squareup.retrofit2:adapter-rxjava2:$retrofitSdkVersion",
             okhttp                    : "com.squareup.okhttp3:okhttp:$okhttpVersion",
-            rxandroid2                : "io.reactivex.rxjava2:rxandroid:2.1.0",
-            rxjava2                   : "io.reactivex.rxjava2:rxjava:2.1.11",
+//            rxandroid2                : "io.reactivex.rxjava2:rxandroid:2.1.0",
+//            rxjava2                   : "io.reactivex.rxjava2:rxjava:2.1.11",
             gson                      : "com.google.code.gson:gson:$gsonVersion",
             glide                     : "com.github.bumptech.glide:glide:$glideSdkVersion",
             "glide-compiler"          : "com.github.bumptech.glide:compiler:$glideSdkVersion",
