--- a/CommonLib/AppLogLib/build.gradle
+++ b/CommonLib/AppLogLib/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':ToolFileLib')
+    implementation project(path: ':AppContextLib')
 }
