--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -39,16 +39,33 @@ dependencies {
     implementation(rootProject.ext.dependencies["swiperefreshlayout"])
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
-    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.3'
     //implementation project(path: ':BaseClassLib')
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
     //implementation project(path: ':EventUploadLib')
-    implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':ToolFileLib')
+    //implementation project(path: ':FileIoHelper')
+    //implementation project(path: ':AppScreenLib')
+    //implementation project(path: ':AppMediaStore')
+    //implementation project(path: ':ImageToolLib')
+    //implementation project(path: ':AppEncryptLib')
+    //implementation project(path: ':ToolMemoryLib')
+    //implementation project(path: ':AppCompress')
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //implementation project(path: ':EastAdapterLib')
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
@@ -57,14 +74,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     //状态栏：https://github.com/yangchong211/YCStatusBar
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
-    implementation project(path: ':ToolMemoryLib')
-    implementation project(path: ':AppCompress')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
-    implementation project(path: ':ToolFileLib')
-    implementation project(path: ':FileIoHelper')
-    implementation project(path: ':AppScreenLib')
-    implementation project(path: ':AppMediaStore')
-    implementation project(path: ':ImageToolLib')
-    implementation project(path: ':AppEncryptLib')
 }
