--- a/MonitorLib/MonitorFileLib/build.gradle
+++ b/MonitorLib/MonitorFileLib/build.gradle
@@ -32,8 +32,16 @@ dependencies {
     implementation(rootProject.ext.dependencies["recyclerview"])
     implementation(rootProject.ext.dependencies["media"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
-    implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.3'
+    //implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':AppCompress')
+    //implementation project(path: ':ToolFileLib')
+    //implementation project(path: ':FileIoHelper')
+    //implementation project(path: ':AppMediaStore')
     //adapter:https://github.com/yangchong211/YCRefreshView
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //状态栏：https://github.com/yangchong211/YCStatusBar
@@ -42,8 +50,4 @@ dependencies {
     implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
     //吐司工具库：https://github.com/yangchong211/YCDialog
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation project(path: ':AppCompress')
-    implementation project(path: ':ToolFileLib')
-    implementation project(path: ':FileIoHelper')
-    implementation project(path: ':AppMediaStore')
 }
