--- a/MonitorLib/MonitorMemory/build.gradle
+++ b/MonitorLib/MonitorMemory/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     //implementation project(path: ':ToolUtilsLib')
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.3'
 }
