--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -31,14 +31,17 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     //工具类utils
-    implementation project(path: ':ToolUtilsLib')
-    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
-    implementation project(path: ':NetWorkLib')
+    //implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    //implementation project(path: ':NetWorkLib')
+    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.3'
     //权限库
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.3'
     implementation project(path: ':LocaleHelperLib')
     //内存工具类
-    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
-    implementation project(path: ':ToolFileLib')
-    implementation project(path: ':AppContextLib')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.3'
+    //implementation project(path: ':ToolFileLib')
+    //implementation project(path: ':AppContextLib')
 }
