--- a/MonitorLib/MonitorPingLib/build.gradle
+++ b/MonitorLib/MonitorPingLib/build.gradle
@@ -11,7 +11,6 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -32,5 +31,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.3'
 }
