--- a/MonitorLib/MonitorNetLib/build.gradle
+++ b/MonitorLib/MonitorNetLib/build.gradle
@@ -40,11 +40,15 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.3'
     implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.3'
-    implementation project(path: ':VideoView')
+    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:1.4.3'
     //状态栏：https://github.com/yangchong211/YCStatusBar
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     //adapter:https://github.com/yangchong211/YCRefreshView
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     implementation(rootProject.ext.dependencies["okhttp"])
-    implementation 'com.github.yangchong211.YCVideoPlayer:VideoView:1.1.0'
 }
