--- a/PlayerLIb/VideoSqlLite/build.gradle
+++ b/PlayerLIb/VideoSqlLite/build.gradle
@@ -26,9 +26,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':AppLruCache')
-    implementation project(path: ':AppLruDisk')
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    //implementation project(path: ':AppLruCache')
+    //implementation project(path: ':AppLruDisk')
 }
 
 
