feat：完善代码库

--- a/AppServer/build.gradle
+++ b/AppServer/build.gradle
@@ -57,5 +57,6 @@ dependencies {
     implementation project(path: ':MonitorInterceptor')
     implementation project(path: ':ToolFileLib')
     implementation project(path: ':AppContextLib')
+    implementation project(path: ':NotCaptureLib')
 }
 
