--- a/ToolLib/NotCaptureLib/build.gradle
+++ b/ToolLib/NotCaptureLib/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation(rootProject.ext.dependencies["okhttp"])
     implementation(rootProject.ext.dependencies["gson"])
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.3'
     //加解密库
     implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.3'
 }
