--- a/AppMonitor/src/main/AndroidManifest.xml
+++ b/AppMonitor/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity
             android:name="com.yc.appmonitor.BlockListActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.yc.appmonitor.net.NetworkActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
