--- a/PlayerLIb/VideoSqlLite/build.gradle
+++ b/PlayerLIb/VideoSqlLite/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.4.3'
     implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.4.3'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
+    //加解密库
+    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.3'
     //implementation project(path: ':AppLruCache')
     //implementation project(path: ':AppLruDisk')
 }
