--- a/PlayerLIb/AudioHelper/build.gradle
+++ b/PlayerLIb/AudioHelper/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation project(path: ':AppContextLib')
 }
