--- a/settings.gradle
+++ b/settings.gradle
@@ -255,7 +255,7 @@ project(':MonitorPicture').projectDir = new File('MonitorLib/MonitorPicture')
 /* +++++++++ 音视频 +++++++++ */
 include ':VideoSqlLite',':VideoCache',':AudioPlayer',':VideoSurface',
         ':MusicPlayer', ':VideoKernel', ':VideoPlayer', ':VideoM3u8', ':VideoView',
-        ':BellsVibrations', ':AudioFocus'
+        ':BellsVibrations', ':AudioHelper', ':MediaHelper'
 project(':VideoSqlLite').projectDir = new File('PlayerLib/VideoSqlLite')
 project(':VideoCache').projectDir = new File('PlayerLib/VideoCache')
 project(':AudioPlayer').projectDir = new File('PlayerLib/AudioPlayer')
@@ -266,4 +266,5 @@ project(':VideoPlayer').projectDir = new File('PlayerLib/VideoPlayer')
 project(':VideoM3u8').projectDir = new File('PlayerLib/VideoM3u8')
 project(':VideoView').projectDir = new File('PlayerLib/VideoView')
 project(':BellsVibrations').projectDir = new File('PlayerLib/BellsVibrations')
-project(':AudioFocus').projectDir = new File('PlayerLib/AudioFocus')
+project(':AudioHelper').projectDir = new File('PlayerLib/AudioHelper')
+project(':MediaHelper').projectDir = new File('PlayerLib/MediaHelper')
