--- a/PlayerLIb/AudioPlayer/src/main/AndroidManifest.xml
+++ b/PlayerLIb/AudioPlayer/src/main/AndroidManifest.xml
@@ -2,4 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.audioplayer">
 
+
+
+    <!--为兼容Android11系统手机，我们需要在应用程序AndroidManifest.xml文件中增加如下声明-->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE"/>
+        </intent>
+    </queries>
+
+
 </manifest>
