feat：音视频焦点抢占优化

--- a/AppServer/build.gradle
+++ b/AppServer/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation project(path: ':ToolFileLib')
     implementation project(path: ':AppContextLib')
     implementation project(path: ':NotCaptureLib')
+    implementation project(path: ':AudioHelper')
 }
 
