--- a/PlayerLIb/AudioHelper/src/main/AndroidManifest.xml
+++ b/PlayerLIb/AudioHelper/src/main/AndroidManifest.xml
@@ -2,5 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.audiofocus">
 
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
 </manifest>
