--- a/PlayerLIb/AudioHelper/build.gradle
+++ b/PlayerLIb/AudioHelper/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':AppContextLib')
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
