feat：完善队列复习

--- a/AppLeet/src/main/AndroidManifest.xml
+++ b/AppLeet/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name="com.yc.appleet.code.CodeTestActivity"/>
         <activity android:name="com.yc.appleet.array.ArrayTestActivity"/>
         <activity android:name="com.yc.appleet.node.NodeTestActivity"/>
+        <activity android:name="com.yc.appleet.queue.QueueTestActivity"/>
     </application>
 
 </manifest>
