feat：开发监听来电和去电

--- a/settings.gradle
+++ b/settings.gradle
@@ -71,7 +71,7 @@ include ':AppStatusLib',':ToolUtilsLib',':FragmentManager',':AppCompress',
         ':AppLruDisk',':AppLruCache',':DownloadHelper',':AppEncryptLib',
         ':AppMediaStore',':DataCloneLib',':AppScreenLib',':BaseVpAdapter',':ImageToolLib',
         ':AppHandlerLib',':FileIoHelper',':ZipFileLib',':NetWorkLib',':AppContextLib',
-        ':AppWiFiLib',':UriAndUrlLib',':AppGrayLib'
+        ':AppWiFiLib',':UriAndUrlLib',':AppGrayLib',':AppCallStatus'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ComponentLib').projectDir = new File('CommonLib/ComponentLib')
@@ -110,6 +110,7 @@ project(':AppContextLib').projectDir = new File('CommonLib/AppContextLib')
 project(':AppWiFiLib').projectDir = new File('CommonLib/AppWiFiLib')
 project(':UriAndUrlLib').projectDir = new File('CommonLib/UriAndUrlLib')
 project(':AppGrayLib').projectDir = new File('CommonLib/AppGrayLib')
+project(':AppCallStatus').projectDir = new File('CommonLib/AppCallStatus')
 
 
 /* +++++++++ 框架view基础组件层 +++++++++ */
@@ -268,3 +269,4 @@ project(':VideoView').projectDir = new File('PlayerLib/VideoView')
 project(':BellsVibrations').projectDir = new File('PlayerLib/BellsVibrations')
 project(':AudioHelper').projectDir = new File('PlayerLib/AudioHelper')
 project(':MediaHelper').projectDir = new File('PlayerLib/MediaHelper')
+
