--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     implementation(rootProject.ext.dependencies["constraintlayout"])
     implementation(rootProject.ext.dependencies["material"])
     //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.3'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.3'
     //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation 'com.github.yangchong211.YCWidgetLib:RoundCorners:1.0.5'
@@ -61,6 +61,9 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:SnackBar:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:DialogFragment:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:BaseDialog:3.6.8'
+
+    implementation project(path: ':AppLogClient')
+    implementation project(path: ':AppLogService')
 
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     implementation project(path: ':ToolUtilsLib')
