--- a/settings.gradle
+++ b/settings.gradle
@@ -41,7 +41,7 @@ include ':ImageServer', ':HttpServer', ':ShareServer', ':NfcServer',
         ':GsonServer', ':IpcServer', ':ObjectEqualLib',
         ':EasyBleServer', ':LogUpload', ':OkHttpServer', ':PrivateServer',
         ':AppLogClient', ':AppLogService', ':NetInterceptor', ':SignalHooker',
-        ':GlideProgressLib', ':CompressServer',  ':RetrofitNetLib'
+        ':GlideProgressLib', ':CompressServer',  ':RetrofitNetLib',  ':Transformation'
 project(':ImageServer').projectDir = new File('ServerLib/ImageServer')
 project(':HttpServer').projectDir = new File('ServerLib/HttpServer')
 project(':ShareServer').projectDir = new File('ServerLib/ShareServer')
@@ -60,6 +60,8 @@ project(':SignalHooker').projectDir = new File('ServerLib/SignalHooker')
 project(':GlideProgressLib').projectDir = new File('ServerLib/GlideProgressLib')
 project(':CompressServer').projectDir = new File('ServerLib/CompressServer')
 project(':RetrofitNetLib').projectDir = new File('ServerLib/RetrofitNetLib')
+project(':Transformation').projectDir = new File('ServerLib/Transformation')
+
 
 
 /* +++++++++ 框架公共组件层 +++++++++ */
@@ -216,8 +218,8 @@ project(':ServiceLoaderPlugin').projectDir = new File('AptHelper/ServiceLoaderPl
 project(':ServiceLoaderProcessor').projectDir = new File('AptHelper/ServiceLoaderProcessor')
 project(':MethodTimePlugin').projectDir = new File('AptHelper/MethodTimePlugin')
 project(':AppInitApi').projectDir = new File('AptHelper/AppInitApi')
-project(':AppInitCommon').projectDir = new File('AptHelper/AppInitCommon')
-project(':AppInitCompiler').projectDir = new File('AptHelper/AppInitCompiler')
+//project(':AppInitCommon').projectDir = new File('AptHelper/AppInitCommon')
+//project(':AppInitCompiler').projectDir = new File('AptHelper/AppInitCompiler')
 
 
 
