--- a/AppCommon/src/main/AndroidManifest.xml
+++ b/AppCommon/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".tab.VpTabActivity"/>
         <activity android:name=".encypt.EncyptActivity"/>
         <activity android:name=".image.ImageActivity"/>
+        <activity android:name=".cache.CacheActivity"/>
     </application>
 
 
