--- a/CommonLib/AppFastSp/build.gradle
+++ b/CommonLib/AppFastSp/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     implementation project(path: ':ToolFileLib')
     implementation project(path: ':AppContextLib')
+    implementation project(path: ':AppLruCache')
 }
