feat：完善通用缓存存储框架的设计

--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
     implementation project(path: ':AppContextLib')
+    //通用组件接口库
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.3'
     implementation project(path: ':AppFastSp')
 }
